--- a/assets/scss/gender.scss
+++ b/assets/scss/gender.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   background-color: #ecf0f1;
+  border-radius: 30px 30px 30px 30px;
+
   width: 200px;
   input {
     position: absolute;
@@ -12,11 +14,12 @@
     color: #95a5a6;
     height: 50px;
     width: 100px;
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+
     cursor: pointer;
     z-index: 1;
     transition: color 500ms ease;
@@ -27,17 +30,21 @@
   position: absolute;
   height: 50px;
   width: 100px;
-  background-color: #2ecc71;
+
+  background-color: #2a8dff;
   z-index: 0;
-  transition: transform 500ms ease-out;
+  transition: transform 0.2s ease-out;
 }
 
 #left-switch:checked ~ .switch-bg {
   transform: translateX(0%);
+  border-radius: 30px 0 0 30px;
 }
 
 #right-switch:checked ~ .switch-bg {
   transform: translateX(100%);
+  background-color: #ff269a;
+  border-radius: 0 30px 30px 0;
 }
 
 input:checked + label {
