--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,2 +1,9 @@
 @import "gender.scss";
 @import "birthday.scss";
+@import "reset.scss";
+@import "home.scss";
+@import "header.scss";
+@import "footer.scss";
+@import "submit.scss";
+@import "result.scss";
+@import "loading.scss";
