--- a/views/error.pug
+++ b/views/error.pug
@@ -19,7 +19,8 @@ block content
             input(type="text" name="month" maxlength="2" size="2" placeholder="MM" id="birthday-month")
             span .
             input(type="text" name="year" maxlength="4" size="4" placeholder="YYYY" id="birthday-year")
+        span.error ❗️Write your birthday correctly
+        span.error (DD=day MM=month YYYY=year)
         input.bubbly-button(type="submit", value="GET NOW!")
-
 
     .name-description Most of the Korean names consist of three syllables <br>(sometimes two or four).<br>Each syllable represents a different meaning, and they combined to create one single signification.
