--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,8 +4,14 @@ html
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU", crossorigin="anonymous")
         title #{pageTitle} | Krean Name
         link(rel="stylesheet", href="/static/styles.css")
+        //- <!-- Go to www.addthis.com/dashboard to customize your tools --> 
+        script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ecb4202cc344f9c")
     body
-        block content
+        include ../partials/header
+        main
+            block content
+        include ../partials/footer
+
 
 
         script(src="/static/main.js")
