--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -1,6 +1,8 @@
 doctype html 
-html
+html(lang="en")
     head   
+        meta(charset="UTF-8")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU", crossorigin="anonymous")
         title #{pageTitle} | Krean Name
         link(rel="stylesheet", href="/static/styles.css")
