--- a/src/views/result.pug
+++ b/src/views/result.pug
@@ -5,7 +5,7 @@ block content
         <p>#{description}<span>#{name}</span>[#{pronunciation}]</p>
 
         //- <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        .social__share Like your korean-name? <br> Share it with your friends!
+        .social__share #{name} means #{description} in English.<br>Like your korean-name? Share it with your friends!
             .addthis_inline_share_toolbox
             
     .loading-wrap
