--- a/src/views/result.pug
+++ b/src/views/result.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block content
     .content.displayBlock
-        <p>#{description}<span>#{name}</span>[#{pronunciation}]</p>
+        <p>This is your first Korean name!<span>#{name}</span>[#{pronunciation}]</p>
 
         //- <!-- Go to www.addthis.com/dashboard to customize your tools -->
         .social__share #{name} means #{description} in English.<br>Like your korean-name? Share it with your friends!
