--- a/src/views/result.pug
+++ b/src/views/result.pug
@@ -7,7 +7,11 @@ block content
         //- <!-- Go to www.addthis.com/dashboard to customize your tools -->
         .social__share <span class="desc__name">#{name}</span> means #{description} in English.<br>
             //- .addthis_inline_share_toolbox
-            .discord <a href="#"><i class="fab fa-discord"></i></a>
+            a.discord(href="https://discord.com/invite/nyzTvqK")
+                .icon
+                    i.fab.fa-discord
+                .ment ↑ Korean Learning Community (with Ryan)
+            .join__ment Join with your korean-name!
             
     .loading-wrap
         .loading-background
