--- a/src/assets/scss/result.scss
+++ b/src/assets/scss/result.scss
@@ -6,7 +6,13 @@
   font-style: normal;
 }
 
-@font-face { font-family: 'JSDongkang-Regular'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/JSDongkang-RegularA1.woff') format('woff'); font-weight: normal; font-style: normal; }
+@font-face {
+  font-family: "JSDongkang-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/JSDongkang-RegularA1.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 
 .content {
   font: 400 1em/1.5 "Neuton";
@@ -48,14 +54,23 @@ p {
   }
 }
 
-.discord{
-  i{
-    font-size: 50px;
-    margin-top: 15px;
+.discord {
+  text-decoration: none;
+  color: black;
+  .icon {
+    i {
+      font-size: 50px;
+      margin-top: 15px;
+      color: #6179c7;
+    }
+  }
+  .ment {
+    font-weight: 700;
+    font-size: 10px;
   }
 }
 
-.desc__name{
+.desc__name {
   font-family: "JSDongkang-Regular";
   text-shadow: 1px 1px 1px gray;
 }
