--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -10,11 +10,11 @@ html(lang="en")
         //- script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ecb4202cc344f9c")
         <script data-ad-client="ca-pub-5426206369408625" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     body
-        include ../partials/header
+        //- include ../partials/header
         main
             block content
-        include ../partials/footer
+        //- include ../partials/footer
         //- <!-- Go to www.addthis.com/dashboard to customize your tools --> 
-        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ecb4202cc344f9c"></script>
+        //- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ecb4202cc344f9c"></script>
 
         script(src="/static/main.js")
