--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -31,4 +31,4 @@ block content
         input.bubbly-button(type="submit", value="What is my Korean name?")
 
 
-    .name-description Most of the Korean names consist of three syllables <br>(sometimes two or four).<br>Each syllable represents a different meaning, and they combined to create one single signification.
+    //- .name-description Most of the Korean names consist of three syllables <br>(sometimes two or four).<br>Each syllable represents a different meaning, and they combined to create one single signification.
