--- a/src/assets/scss/loading.scss
+++ b/src/assets/scss/loading.scss
@@ -11,7 +11,8 @@
 .loading-wrap {
   width: 100%;
   text-align: center;
-  margin: 40px 0;
+  margin: 180px 0;
+  height: 100vh;
 }
 .loading-wrap span {
   font-size: 20px;
